--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,242 @@
+absl-py==2.1.0
+aiohappyeyeballs==2.4.3
+aiohttp==3.10.10
+aiosignal==1.3.1
+alembic==1.13.3
+annotated-types==0.7.0
+anyio==4.5.0
+argon2-cffi==23.1.0
+argon2-cffi-bindings==21.2.0
+arrow==1.3.0
+asttokens==2.4.1
+astunparse==1.6.3
+async-lru==2.0.4
+async-timeout==4.0.3
+attrs==24.2.0
+awsebcli==3.21.0
+babel==2.16.0
+backcall==0.2.0
+banal==1.0.6
+bcrypt==4.2.0
+beautifulsoup4==4.12.3
+bidict==0.23.1
+bleach==6.1.0
+blinker==1.8.2
+blis==0.7.11
+botocore==1.35.74
+cachetools==5.5.0
+catalogue==2.0.10
+cement==2.10.14
+certifi==2024.8.30
+cffi==1.17.1
+charset-normalizer==3.3.2
+click==8.1.7
+cloudpathlib==0.19.0
+colorama==0.4.6
+comm==0.2.2
+comtypes==1.4.7
+confection==0.1.5
+contourpy==1.1.1
+cryptography==44.0.0
+cycler==0.12.1
+cymem==2.0.8
+dataset==1.6.2
+datasets==3.0.1
+debugpy==1.8.6
+decorator==5.1.1
+defusedxml==0.7.1
+dill==0.3.8
+distro==1.9.0
+dnspython==2.6.1
+email_validator==2.2.0
+en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl
+exceptiongroup==1.2.2
+executing==2.1.0
+fastjsonschema==2.20.0
+filelock==3.16.1
 Flask==3.0.3
-Flask-WTF==1.2.1
-Flask-SQLAlchemy==3.1.1
+flask-babel==4.0.0
+Flask-Bcrypt==1.0.1
 Flask-Login==0.6.3
-SQLAlchemy==2.0.16
-torch==2.4.1
-Pillow==10.4.0
-spacy==3.7.5
-transformers==4.46.3
-sentence-transformers==3.2.1
 Flask-Migrate==4.0.7
-pymysql==1.1.1
-werkzeug==3.0.4
-gunicorn
+Flask-SocketIO==5.4.1
+Flask-SQLAlchemy==3.1.1
+Flask-WTF==1.2.1
+flatbuffers==24.3.25
+fonttools==4.54.1
+fqdn==1.5.1
+frozenlist==1.4.1
+fsspec==2024.6.1
+gast==0.4.0
+google-auth==2.35.0
+google-auth-oauthlib==1.0.0
+google-pasta==0.2.0
+greenlet==3.1.1
+grpcio==1.66.2
+gTTS==2.5.3
+gunicorn==23.0.0
+h11==0.14.0
+h5py==3.11.0
+httpcore==1.0.6
+httpx==0.27.2
+huggingface-hub==0.25.2
+idna==3.10
+importlib_metadata==8.5.0
+importlib_resources==6.4.5
+ipykernel==6.29.5
+ipython==8.12.3
+isoduration==20.11.0
+itsdangerous==2.2.0
+jedi==0.19.1
+Jinja2==3.1.4
+jiter==0.8.0
+jmespath==1.0.1
+joblib==1.4.2
+json5==0.9.25
+jsonpointer==3.0.0
+jsonschema==4.23.0
+jsonschema-specifications==2023.12.1
+jupyter-events==0.10.0
+jupyter-lsp==2.2.5
+jupyter_client==8.6.3
+jupyter_core==5.7.2
+jupyter_server==2.14.2
+jupyter_server_terminals==0.5.3
+jupyterlab==4.2.5
+jupyterlab_pygments==0.3.0
+jupyterlab_server==2.27.3
+keras==2.13.1
+kiwisolver==1.4.7
+langcodes==3.4.1
+language_data==1.2.0
+libclang==18.1.1
+Mako==1.3.5
+marisa-trie==1.2.1
+Markdown==3.7
+markdown-it-py==3.0.0
+MarkupSafe==2.1.5
+matplotlib==3.7.5
+matplotlib-inline==0.1.7
+mdurl==0.1.2
+mistune==3.0.2
+mpmath==1.3.0
+multidict==6.1.0
+multiprocess==0.70.16
+murmurhash==1.0.10
+mysql-connector-python==9.0.0
+nbclient==0.10.0
+nbconvert==7.16.4
+nbformat==5.10.4
+nest-asyncio==1.6.0
+networkx==3.1
+notebook_shim==0.2.4
+numpy==1.23.5
+oauthlib==3.2.2
+openai==0.28.0
+opt_einsum==3.4.0
+overrides==7.7.0
+packaging==24.1
+pandas==2.0.3
+pandocfilters==1.5.1
+parso==0.8.4
+passlib==1.7.4
+pathspec==0.10.1
+pickleshare==0.7.5
+pillow==10.4.0
+pkgutil_resolve_name==1.3.10
+platformdirs==4.3.6
+preshed==3.0.9
+prometheus_client==0.21.0
+prompt_toolkit==3.0.48
+propcache==0.2.0
+protobuf==4.25.5
+psutil==6.0.0
+pure_eval==0.2.3
+pyarrow==17.0.0
+pyasn1==0.6.1
+pyasn1_modules==0.4.1
+pycparser==2.22
+pydantic==2.9.2
+pydantic_core==2.23.4
+Pygments==2.18.0
+PyMySQL==1.1.1
+pyparsing==3.1.4
+pypiwin32==223
+python-dateutil==2.9.0.post0
+python-engineio==4.10.1
+python-json-logger==2.0.7
+python-socketio==5.11.4
+pyttsx3==2.98
+pytz==2024.2
+pywin32==307
+pywinpty==2.0.13
+PyYAML==6.0.2
+pyzmq==26.2.0
+referencing==0.35.1
+regex==2024.9.11
+requests==2.32.3
+requests-oauthlib==2.0.0
+rfc3339-validator==0.1.4
+rfc3986-validator==0.1.1
+rich==13.9.2
+rpds-py==0.20.0
+rsa==4.9
+safetensors==0.4.5
+scikit-learn==1.3.2
+scipy==1.10.1
+semantic-version==2.10.0
+Send2Trash==1.8.3
+sentence-transformers==3.2.1
+shellingham==1.5.4
+simple-websocket==1.1.0
+six==1.16.0
+smart-open==7.0.5
+sniffio==1.3.1
+soupsieve==2.6
+spacy==3.7.5
+spacy-legacy==3.0.12
+spacy-loggers==1.0.5
+SQLAlchemy==2.0.0
+srsly==2.4.8
+stack-data==0.6.3
+stripe==11.1.1
+sympy==1.13.3
+tensorboard==2.13.0
+tensorboard-data-server==0.7.2
+tensorflow==2.13.0
+tensorflow-estimator==2.13.0
+tensorflow-intel==2.13.0
+tensorflow-io-gcs-filesystem==0.31.0
+termcolor==2.4.0
+terminado==0.18.1
+thinc==8.2.5
+threadpoolctl==3.5.0
+tinycss2==1.3.0
+tokenizers==0.20.1
+tomli==2.0.2
+torch==2.4.1
+torchvision==0.19.1
+tornado==6.4.1
+tqdm==4.66.5
+traitlets==5.14.3
+transformers==4.46.3
+typer==0.12.5
+types-python-dateutil==2.9.0.20241003
+typing_extensions==4.12.2
+tzdata==2024.2
+uri-template==1.3.0
+urllib3==1.26.20
+waitress==3.0.0
+wasabi==1.1.3
+wcwidth==0.2.13
+weasel==0.4.1
+webcolors==24.8.0
+webencodings==0.5.1
+websocket-client==1.8.0
+Werkzeug==3.0.4
+wrapt==1.16.0
+wsproto==1.2.0
+WTForms==3.1.2
+xxhash==3.5.0
+yarl==1.14.0
+zipp==3.20.2
